Building a shaded jar
Also moving down to java 11 as the minimum version